# json-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api-actix/: Cargo.toml  Dockerfile
api-actix/src/: main.rs
api-axum/: Cargo.toml  Dockerfile
api-axum/src/: main.rs
api-rocket/: Cargo.toml  Dockerfile
api-rocket/src/: main.rs
cli/: Cargo.toml  Dockerfile
cli/src/: main.rs
shared-lib/: Cargo.toml
shared-lib/src/: array.rs  json.rs  lib.rs  number.rs  object.rs  string.rs  value.rs
shared_lib/: Cargo.toml
shared_lib/src/: array.rs  json.rs  lib.rs  number.rs  object.rs  pair.rs  string.rs  types.rs  value.rs
testdata/: all.rest  array.rest  bad-request.rest  boolean.rest  null.rest  number.rest  object.rest  string.rest
