[package]
name = "api-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
mime = "0.3.17"
serde_json = "1.0.143"
shared-lib = { path = "../shared-lib" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
